// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> does not render at first and then render 1`] = `
<body>
  <div />
</body>
`;

exports[`<Modal /> does not render at first and then render 2`] = `
<body>
  <div
    aria-hidden="true"
  />
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="sc-eqUAAy breLRF"
          data-reach-dialog-overlay=""
        >
          <div
            aria-label="title"
            aria-modal="true"
            class="sc-fqkvVR jXKVYi"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            Some content
            <button
              class="sc-aXZVg cmlGbr sc-dcJsrY kXKaBQ"
              title="fermer la modale"
            >
              <div
                class="sc-gEvEer bGSueO"
              >
                fermer la modale
              </div>
              <svg
                aria-hidden="true"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`<Modal /> renders the provided wrapper 1`] = `
<body>
  <div
    aria-hidden="true"
  />
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="sc-eqUAAy breLRF"
          data-reach-dialog-overlay=""
        >
          <span
            aria-label="title"
            class="sc-iGgWBj qohFy"
          >
            This won't be displayed
            <button
              class="sc-aXZVg cmlGbr sc-dcJsrY kXKaBQ"
              title="fermer la modale"
            >
              <div
                class="sc-gEvEer bGSueO"
              >
                fermer la modale
              </div>
              <svg
                aria-hidden="true"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;
